changes in header

--- a/src/components/dashboard/style.dash.scss
+++ b/src/components/dashboard/style.dash.scss
@@ -20,6 +20,9 @@
         & svg {
             color: #d1d1f0;
         }
+        .github-link {
+          margin-left: 10px;
+        }
         .user-block {
             margin-left: auto;
             padding-right: 20px;
