--- a/src/components/dashboard/style.dash.scss
+++ b/src/components/dashboard/style.dash.scss
@@ -65,4 +65,23 @@
         width: calc(100% - 30px);
 
     }
+    .user-item-block {
+      position: fixed;
+      width: 600px;
+      padding: 10px;
+      height: calc(100% - 40px);
+      top: 40px;
+      right: 0;
+      z-index: 1000;
+      background-color: #fff;
+      border-left: 1px solid #dbdbdb;
+    }
+    .user-item-block-closed {
+   transform: translateX(620px);
+   transition: transform 1s;
+    }
+    .user-item-block-open {
+      transform: translateX(0px);
+      transition: transform 1s;
+    }
 }
